# DiscordChatExporterPy

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: codeql-analysis.yml  integration-test.yml  lint.yml  python-publish.yml  test.yml
chat_exporter/: __init__.py  build_attachments.py  build_components.py  build_embed.py  build_html.py  build_reaction.py  cache.py  chat_exporter.py  emoji_convert.py  markdown_convert.py  mention_convert.py  misc_tools.py  parse_markdown.py  parse_mention.py
chat_exporter/chat_exporter_html/: base.html  bot-tag.html  continue_message.html  embed_author.html  embed_author_icon.html  embed_footer.html  embed_thumbnail.html  message-embed-field-inline.html  message-embed-field.html  message-embed.html  message.html
chat_exporter/chat_exporter_html/attachment/: audio.html  image.html  message.html  message_attachment.html  video.html
chat_exporter/chat_exporter_html/component/: component_button.html
chat_exporter/chat_exporter_html/embed/: description.html  field-inline.html  field.html  footer_image.html  title.html
chat_exporter/chat_exporter_html/message/: content.html  message.html  pin.html  reference.html  reference_unknown.html  start.html
chat_exporter/construct/: asset_handler.py  attachment_handler.py  message.py  transcript.py
chat_exporter/construct/assets/: __init__.py  attachment.py  component.py  embed.py  reaction.py
chat_exporter/ext/: aiohttp_factory.py  cache.py  discord_import.py  discord_utils.py  discriminator.py  emoji_convert.py  html_generator.py
chat_exporter/html/: base.html
chat_exporter/html/attachment/: audio.html  image.html  image_grid.html  image_grid_item.html  message.html  video.html
chat_exporter/html/component/: component_button.html  component_container.html  component_file.html  component_media_gallery.html  component_media_gallery_item.html  component_menu.html  component_menu_options.html  component_menu_options_emoji.html  component_section.html  component_separator.html  component_text_display.html  component_thumbnail.html
chat_exporter/html/embed/: author.html  author_icon.html  body.html  field-inline.html  field.html  footer.html  image.html  title.html
chat_exporter/html/message/: bot-tag-verified.html  bot-tag.html  content.html  forwarded.html  interaction.html  message.html  meta.html  pin.html  reference.html  reference_forwarded.html  reference_unknown.html  start.html  thread.html  thread_add.html  thread_remove.html
chat_exporter/html/reaction/: custom_emoji.html  emoji.html
chat_exporter/html/script/: channel_subject.html  channel_topic.html  fancy_time.html
chat_exporter/parse/: ast.py  markdown.py  mention.py
tests/: integration_test_discord.py  test_ast.py  test_export.py
