[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_exporter"
description = "A simple Discord chat exporter for Python Discord bots."
version = "3.1.0"
readme = "README.md"
authors = [
    { name="mahtoid", email="info@mahto.id" }
]
requires-python = ">=3.6"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["aiohttp", "pytz", "grapheme", "emoji"]
keywords = ["chat exporter", "discord chat exporter", "discord", "discordpy", "disnake", "pycord", "nextcord"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
# Target version for the generated code.
target-version = "py311"
line-length = 120

[tool.ruff.lint]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Also enable security rules (`S`) and isort (`I`).
select = ["E4", "E7", "E9", "F", "S", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[project.urls]
Homepage = "https://github.com/mahtoid/DiscordChatExporterPy"
Discord = "https://discord.mahto.id/"
Donate = "https://ko-fi.com/mahtoid"
